style.css
body {
    background-color: #6c757d;
    overflow-y: hidden;
    /*background-color: #14213d;525174  b5d6d6*/
}

#container {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
}

#content {
    background-color: #333533;
    /*background-color: #004369;14213d 333533*/
    position: fixed;
    width: 50%;
    height: 30rem;
    border-radius: .5rem;
    border: 1px solid #c2c2c2;
    border-top: 0px;
    box-shadow: 2px 3px 20px 2px #888888;
    overflow-y: hidden;
}

#navbar {
    background-color: grey;
    display: flex;
    justify-content: space-between;
    height: 2rem;
    border-radius: .5rem;
    border-bottom-right-radius: 0px;
    border-bottom-left-radius: 0px;
    border: 1px solid #c2c2c2;
    border-left: 0px;
    border-right: 0px;
    position:fixed;
    width: inherit;
}

h2 {
    display: inline;
    font-family: 'Press Start 2P', cursive;
    font-size: .8rem;
}

.phoneDisplay {
    display: none;
}

.header {
    margin-top: .6rem;
    margin-right: 1rem;
}

a {
    text-decoration: none;
    color: #393d3f;
}

a:hover {
    color: #e5e5e5;
}

.circles {
    display: flex;
    align-items: center;  
    margin-left: .5rem;
}

.round {
    margin: 0px 4px;
}

.round:first-child {
    height: 1rem;
    width: 1rem;
    background-color: green;
    border-radius: 50%;
}

.round:first-child:hover {
    height: 1.1rem;
    width: 1.1rem;
    box-shadow: 15px 15px rgba(0, 0, 0, 0.5) inset;
}

.round:nth-child(2) {
    height: 1rem;
    width: 1rem;
    background-color: orange;
    border-radius: 50%;
}

.round:nth-child(2):hover {
    height: 1.1rem;
    width: 1.1rem;
    box-shadow: 15px 15px rgba(0, 0, 0, 0.5) inset;
}

.round:nth-child(3) {
    height: 1rem;
    width: 1rem;
    background-color: red;
    border-radius: 50%;
}

.round:nth-child(3):hover {
    height: 1.1rem;
    width: 1.1rem;
    box-shadow: 15px 15px rgba(0, 0, 0, 0.5) inset;
}

#terminal {
    padding: 10px 10px;
    font-family: 'Press Start 2P', cursive;
    font-size: .7rem;
    color: #c2c2c2;
    
    /*38b000 4AF626  green: 4AF626*/
}

.error {
    margin: 1rem 0 .5rem 2rem;
}

.errorMessage {
    color: #c75146;
}

.codeGreen {
    color: #4AF626;
}

.help {
    color: #65afff;
}

.helpSpace {
    padding-left: 30px;
    color: #65afff;
    display: block;
    margin: 1rem 0 0 2rem;
}

.helpSpace a {
    text-decoration: underline;
    color: #c2c2c2;
}

.helpSpace a:hover {
    text-decoration: underline;
    color: #65afff;
}

.cmdOutput {
    color: #65afff;
    margin-left: 2rem;
}

#caret{
    font-size: .7rem;
    color: #c2c2c2;
}

input {
    width: 40%;
    font-family: 'Press Start 2P', cursive;
    font-size: .7rem;
    color: #4AF626;
    background-color: #333533;
    border-width: 0;
    height: 1.5rem;
    caret-color: #4AF626;
}

input:focus {
    outline: none;
}


@media screen and (max-width: 720px) {

    .phoneDisplay {
        display: none;
    }

    #content {
        width: 100%;
    }

}

@media screen and (max-width: 370px) {
    h2 {
        display: none;
    } 

    .phoneDisplay {
        display: inline;
        font-family: 'Press Start 2P', cursive;
        font-size: .8rem;
        color: #393d3f;
    }
}

/* width */
/* ::-webkit-scrollbar {
    width: 10px;
    height: 500px;
    overflow: hidden;
  } */

